==> Scottapotamas/zaphod-bot/firmware/Src/hal/hal_uart.c <==
#include <string.h>
#include <stdlib.h>
#include <stdarg.h>
#include <stdio.h>
#include "stm32f4xx_ll_usart.h"
#include "stm32f4xx_ll_dma.h"
#include "stm32f4xx_ll_bus.h"
#include "global.h"
#include "hal_uart.h"
#include "hal_gpio.h"
#include "fifo.h"
#include "qassert.h"
#define  HAL_UART_RX_FIFO_SIZE      128
#define  HAL_UART_TX_FIFO_SIZE      128
#define HAL_UART_RX_DMA_BUFFER_SIZE 64
#define UART_EXTERNAL_BAUD	115200
#define UART_INTERNAL_BAUD	115200
#define UART_MODULE_BAUD	115200

PUBLIC void
hal_uart_init( HalUartPort_t port )
{
    HalUart_t * h = &hal_uart[port];
    memset( h, 0, sizeof( HalUart_t ) );

    switch( port )
    {
        case HAL_UART_PORT_EXTERNAL:
            h->port = HAL_UART_PORT_EXTERNAL;
            h->usart = UART5;

            fifo_init( &h->tx_fifo, h->tx_buffer, HAL_UART_TX_FIFO_SIZE );
            fifo_init( &h->rx_fifo, h->rx_buffer, HAL_UART_RX_FIFO_SIZE );

            // See STM DMA Controller Description AN4031 Section 1.1.1 for Stream/Channel matrix
            h->dma_peripheral   = DMA1;
            h->dma_stream_tx    = LL_DMA_STREAM_7;
            h->dma_channel_tx   = LL_DMA_CHANNEL_4;
            h->dma_stream_rx    = LL_DMA_STREAM_0;
            h->dma_channel_rx   = LL_DMA_CHANNEL_4;

            LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_UART5);

            hal_gpio_init_alternate( _EXT_OUTPUT_0, LL_GPIO_OUTPUT_PUSHPULL, LL_GPIO_AF_8, LL_GPIO_SPEED_FREQ_HIGH, LL_GPIO_PULL_UP );
            hal_gpio_init_alternate( _EXT_INPUT_0, 	LL_GPIO_OUTPUT_PUSHPULL, LL_GPIO_AF_8, LL_GPIO_SPEED_FREQ_HIGH, LL_GPIO_PULL_UP );

            hal_uart_dma_init( h );
            hal_uart_set_baudrate( h->port, UART_EXTERNAL_BAUD );

            HAL_NVIC_SetPriority( UART5_IRQn, 12, 0 );
            HAL_NVIC_EnableIRQ( UART5_IRQn );
            break;

        case HAL_UART_PORT_INTERNAL:
            h->port = HAL_UART_PORT_INTERNAL;
            h->usart = USART1;

            fifo_init( &h->tx_fifo, h->tx_buffer, HAL_UART_TX_FIFO_SIZE );
            fifo_init( &h->rx_fifo, h->rx_buffer, HAL_UART_RX_FIFO_SIZE );

            h->dma_peripheral   = DMA2;
            h->dma_stream_tx    = LL_DMA_STREAM_7;
            h->dma_channel_tx   = LL_DMA_CHANNEL_4;
            h->dma_stream_rx    = LL_DMA_STREAM_2;
            h->dma_channel_rx   = LL_DMA_CHANNEL_4;

            LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_USART1);

            hal_gpio_init_alternate( _AUX_UART_RX, LL_GPIO_OUTPUT_PUSHPULL, LL_GPIO_AF_7, LL_GPIO_SPEED_FREQ_HIGH, LL_GPIO_PULL_UP );
            hal_gpio_init_alternate( _AUX_UART_TX, LL_GPIO_OUTPUT_PUSHPULL, LL_GPIO_AF_7, LL_GPIO_SPEED_FREQ_HIGH, LL_GPIO_PULL_UP );

            hal_uart_dma_init( h );
            hal_uart_set_baudrate( h->port, UART_INTERNAL_BAUD );

            HAL_NVIC_SetPriority( USART1_IRQn, 12, 0 );
            HAL_NVIC_EnableIRQ( USART1_IRQn );
            break;

        case HAL_UART_PORT_MODULE:
            h->port = HAL_UART_PORT_MODULE;
            h->usart = USART2;

            fifo_init( &h->tx_fifo, h->tx_buffer, HAL_UART_TX_FIFO_SIZE );
            fifo_init( &h->rx_fifo, h->rx_buffer, HAL_UART_RX_FIFO_SIZE );

            h->dma_peripheral   = DMA1;
            h->dma_stream_tx    = LL_DMA_STREAM_6;
            h->dma_channel_tx   = LL_DMA_CHANNEL_4;
            h->dma_stream_rx    = LL_DMA_STREAM_5;
            h->dma_channel_rx   = LL_DMA_CHANNEL_4;

            LL_APB1_GRP1_EnableClock(LL_APB1_GRP1_PERIPH_USART2);

            hal_gpio_init_alternate( _CARD_UART_RX, LL_GPIO_OUTPUT_PUSHPULL, LL_GPIO_AF_7, LL_GPIO_SPEED_FREQ_HIGH, LL_GPIO_PULL_UP );
            hal_gpio_init_alternate( _CARD_UART_TX, LL_GPIO_OUTPUT_PUSHPULL, LL_GPIO_AF_7, LL_GPIO_SPEED_FREQ_HIGH, LL_GPIO_PULL_UP );
            hal_gpio_init_alternate( _CARD_UART_CTS, LL_GPIO_OUTPUT_PUSHPULL, LL_GPIO_AF_7, LL_GPIO_SPEED_FREQ_HIGH, LL_GPIO_PULL_NO );
            hal_gpio_init_alternate( _CARD_UART_RTS, LL_GPIO_OUTPUT_PUSHPULL, LL_GPIO_AF_7, LL_GPIO_SPEED_FREQ_HIGH, LL_GPIO_PULL_NO );

            hal_uart_dma_init( h );
            hal_uart_set_baudrate( h->port, UART_MODULE_BAUD );

            HAL_NVIC_SetPriority( USART2_IRQn, 12, 0 );
            HAL_NVIC_EnableIRQ( USART2_IRQn );
            break;

        default:
            break;
    }
}

PUBLIC void
hal_uart_set_baudrate( HalUartPort_t port, uint32_t baudrate )
{
    HalUart_t * h = &hal_uart[port];
    LL_USART_InitTypeDef USART_InitStruct = {0};

    USART_InitStruct.BaudRate = baudrate;
    USART_InitStruct.DataWidth = LL_USART_DATAWIDTH_8B;
    USART_InitStruct.StopBits = LL_USART_STOPBITS_1;
    USART_InitStruct.Parity = LL_USART_PARITY_NONE;
    USART_InitStruct.TransferDirection = LL_USART_DIRECTION_TX_RX;
    USART_InitStruct.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
    USART_InitStruct.OverSampling = LL_USART_OVERSAMPLING_16;
    LL_USART_Init(h->usart, &USART_InitStruct);

    LL_USART_ConfigAsyncMode(h->usart);
    LL_USART_EnableDMAReq_TX(h->usart);
    LL_USART_EnableDMAReq_RX(h->usart);
    LL_USART_EnableIT_IDLE(h->usart);
}

PRIVATE void
hal_uart_tx_start( HalUart_t *h )
{
    CRITICAL_SECTION_VAR();
    CRITICAL_SECTION_START();

    // If transfer is not on-going
    if (!LL_DMA_IsEnabledStream(h->dma_peripheral, h->dma_stream_tx))
    {
        h->tx_sneak_bytes = fifo_used_linear(&h->tx_fifo);

        // Limit maximum transmit burst size
        if (h->tx_sneak_bytes > 32)
        {
            h->tx_sneak_bytes = 32;
        }

        // Transmit any data left in the buffer
        if (h->tx_sneak_bytes > 0)
        {
            // ask the fifo for the pointer to our data
            void* ptr = fifo_get_tail_ptr( &h->tx_fifo, h->tx_sneak_bytes );;

            if( ptr )   // nullptr check
            {
                LL_DMA_SetDataLength(h->dma_peripheral, h->dma_stream_tx, h->tx_sneak_bytes);
                LL_DMA_SetMemoryAddress(h->dma_peripheral, h->dma_stream_tx, (uint32_t)ptr);

                hal_uart_clear_dma_tx_flags( h );
                LL_DMA_EnableStream(h->dma_peripheral, h->dma_stream_tx);
            }
        }
    }

    CRITICAL_SECTION_END();
}
