==> Scottapotamas/zaphod-bot/software/delta-control/Src/hal/hal_uart.c <==
#include <string.h>
#include <stdlib.h>
#include <stdarg.h>
#include "global.h"
#include "qassert.h"
#include "hal_uart.h"
#include "hal_gpio.h"
#include "stm32f4xx_hal.h"
#include "fifo.h"
#define  HAL_UART_RX_FIFO_SIZE      256
#define  HAL_UART_TX_FIFO_SIZE      256
#define UART_EXTERNAL_BAUD	115200
#define UART_INTERNAL_BAUD	115200
#define UART_MODULE_BAUD	115200

PUBLIC void
hal_uart_init( HalUartPort_t port )
{
    HalUart_t * h = &hal_uart[port];
    memset( h, 0, sizeof( HalUart_t ) );

    switch( port )
    {
        case HAL_UART_PORT_EXTERNAL:
            h->port = HAL_UART_PORT_EXTERNAL;
            fifo_init( &h->tx_fifo, h->tx_buffer, HAL_UART_TX_FIFO_SIZE );
            fifo_init( &h->rx_fifo, h->rx_buffer, HAL_UART_RX_FIFO_SIZE );

            h->usart.Instance = UART5;
			hal_uart_set_baudrate( h->port, UART_EXTERNAL_BAUD );
			hal_uart_init_uart5_io_and_isr();
            break;

        case HAL_UART_PORT_INTERNAL:
            h->port = HAL_UART_PORT_INTERNAL;
            fifo_init( &h->tx_fifo, h->tx_buffer, HAL_UART_TX_FIFO_SIZE );
            fifo_init( &h->rx_fifo, h->rx_buffer, HAL_UART_RX_FIFO_SIZE );

			h->usart.Instance = USART1;
			hal_uart_set_baudrate( h->port, UART_INTERNAL_BAUD );
			hal_uart_init_usart1_io_and_isr();
            break;

        case HAL_UART_PORT_MODULE:
            h->port = HAL_UART_PORT_MODULE;
            fifo_init( &h->tx_fifo, h->tx_buffer, HAL_UART_TX_FIFO_SIZE );
            fifo_init( &h->rx_fifo, h->rx_buffer, HAL_UART_RX_FIFO_SIZE );

			h->usart.Instance = USART2;
			hal_uart_set_baudrate( h->port, UART_MODULE_BAUD );
			hal_uart_init_usart2_io_and_isr();
            break;

        default:
            break;
    }
}

PUBLIC void
hal_uart_set_baudrate( HalUartPort_t port, uint32_t baudrate )
{
    HalUart_t * h = &hal_uart[port];

    h->usart.Init.BaudRate     = baudrate;
    h->usart.Init.WordLength   = UART_WORDLENGTH_8B;
    h->usart.Init.StopBits     = UART_STOPBITS_1;
    h->usart.Init.Parity       = UART_PARITY_NONE;
    h->usart.Init.Mode         = UART_MODE_TX_RX;
    h->usart.Init.HwFlowCtl    = UART_HWCONTROL_NONE;
    h->usart.Init.OverSampling = UART_OVERSAMPLING_16;

    HAL_UART_Init( &h->usart );
    __HAL_UART_ENABLE_IT( &h->usart, UART_IT_RXNE );
}

PUBLIC void
hal_uart_tx_start( HalUartPort_t port )
{
    HalUart_t * h = &hal_uart[port];

    if( ! __HAL_UART_GET_IT_SOURCE( &h->usart, UART_IT_TXE ) )
    {
        /* Interrupt disabled, kick start it */
        uint8_t c;
        fifo_read( &h->tx_fifo, &c, 1 );
        h->usart.Instance->DR = c;
        __HAL_UART_ENABLE_IT( &h->usart, UART_IT_TXE );
    }
}
